--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
 body{
-    background-color: darkgray;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-img{
-    width: 40%;
-    position: relative;
-    left: 30%;
+.container{
+    display: flex;
 }
-h2{
-    font-size: 45px;
-    color: whitesmoke;
+.logo{
+    flex: 20%;
+}
+.nav-menu{
+    flex: 60%;
+}
+.nav-menu ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+.nav-menu ul li a{
+    text-decoration: none;
+    padding-left: 20px;
     text-align: center;
-    
+}
+.btn-button{
+    flex: 20%;
+    display: flex;
+    flex-flow:row-reverse wrap;
+    padding-right: 30px;
 }
